[tool.poetry]
name = "morph-prover-cli"
version = "0.0.1"
description = ""
authors = ["jesse <jessemhan@proton.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.11"
tqdm = "^4.66.1"
fire = "^0.5.0"
alive-progress = "^3.1.4"
rich = "^13.6.0"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
